--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,12 @@ dependencies {
     implementation 'io.github.inflationx:calligraphy3:3.1.1'
     implementation 'io.github.inflationx:viewpump:2.0.3'
 
+    //blur view
+    implementation 'io.alterac.blurkit:blurkit:1.1.0'
+
+    //Progress bar
+    implementation 'com.mikhaellopez:circularprogressbar:3.0.3'
+
+
+
 }
