--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,8 @@ dependencies {
     //Progress bar
     implementation 'com.mikhaellopez:circularprogressbar:3.0.3'
 
+    //Calendar
+    implementation "com.github.kizitonwose:CalendarView:0.3.4"
 
 
 }
