--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = '1.3.72'
-    ext.nav_version = '2.3.0-alpha06'
+    ext.nav_version = '2.3.0'
     ext.roomVersion = '2.2.5'
     repositories {
         google()
@@ -18,6 +18,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
